<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SearchFragment">

        <TextView
            android:id="@+id/searchHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120sp"
            android:layout_marginTop="28sp"
            android:layout_marginEnd="120sp"
            android:gravity="center_horizontal"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/searchGenderTextView"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="52sp"
            android:text="@string/gender"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/searchHeader"
            app:layout_constraintStart_toStartOf="@+id/searchHeader"
            app:layout_constraintTop_toBottomOf="@+id/searchHeader" />

        <TextView
            android:id="@+id/searchContinentTextView"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="40sp"
            android:text="@string/continent"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/searchGender"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@+id/searchGender"
            app:layout_constraintTop_toBottomOf="@+id/searchGender" />

        <TextView
            android:id="@+id/searchGameTextView"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="40sp"
            android:text="@string/game"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/searchContinent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@+id/searchContinent"
            app:layout_constraintTop_toBottomOf="@+id/searchContinent" />

        <TextView
            android:id="@+id/searchRankTextView"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="40sp"
            android:text="@string/rank"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/searchGame"
            app:layout_constraintStart_toStartOf="@+id/searchGame"
            app:layout_constraintTop_toBottomOf="@+id/searchGame"


            />

        <Spinner
            android:id="@+id/searchGender"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:entries="@array/Gender"
            app:layout_constraintEnd_toEndOf="@+id/searchGenderTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/searchGenderTextView"
            app:layout_constraintTop_toBottomOf="@+id/searchGenderTextView"></Spinner>

        <Spinner
            android:id="@+id/searchContinent"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:entries="@array/Continent"
            app:layout_constraintEnd_toEndOf="@+id/searchContinentTextView"
            app:layout_constraintStart_toStartOf="@+id/searchContinentTextView"
            app:layout_constraintTop_toBottomOf="@+id/searchContinentTextView"></Spinner>

        <Spinner
            android:id="@+id/searchGame"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:entries="@array/Games"
            app:layout_constraintEnd_toEndOf="@+id/searchGameTextView"
            app:layout_constraintStart_toStartOf="@+id/searchGameTextView"
            app:layout_constraintTop_toBottomOf="@+id/searchGameTextView"></Spinner>

        <Spinner
            android:id="@+id/searchGameRank"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:entries="@array/FifaRankings"
            app:layout_constraintEnd_toEndOf="@+id/searchRankTextView"
            app:layout_constraintStart_toStartOf="@+id/searchRankTextView"
            app:layout_constraintTop_toBottomOf="@+id/searchRankTextView"></Spinner>

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="170sp"
            android:layout_height="52sp"
            android:layout_marginTop="70sp"
            android:layout_marginBottom="50sp"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/searchBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/searchGameRank"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/searchGameRank"
            app:layout_constraintTop_toBottomOf="@+id/searchGameRank"
            app:layout_constraintVertical_bias="1.0"></Button>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>